log/build_2026-04-03_03-02-11/trust_contact/stderr.log
  File "/home/paulav/contact_ws/install/trust_contact/lib/python3.10/site-packages/trust_contact/generating_data.py", line 54
    model.fit(X, speed_true)import random
                            ^^^^^^
SyntaxError: invalid syntax

